--- a/src/main/resources/templates/invoice/show.html
+++ b/src/main/resources/templates/invoice/show.html
@@ -7,7 +7,7 @@
 <body>
   <h1 th:text="${title}"></h1>
   <!-- utext es para intérprete html text eso es para que lea el acento Jes&uacute;s -->
- <h3 th:text="${invoice.description}"></h3>
+ <h3 th:utext="${invoice.description}"></h3>
   <div>Cliente: <span th:utext="${invoice.client.name + ' ' + invoice.client.lastname}"></span> </div>
 
   <table>
